--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,13 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="icon" type="image/png" href="img/icon_16.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/popup.css">
 
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/zip.min.js"></script>
-    <script src="js/content.js"></script>
 
     <!-- File Storage -->
     <!-- <script src="js/libs/localforage.min.js"></script> -->
@@ -23,10 +22,10 @@
     <script src="js/libs/screenfull.min.js"></script>
 
     <!-- Render -->
-    <script src="js/epub.js"></script>
+    <script src="js/epub.min.js"></script>
 
     <!-- Reader -->
-    <script src="js/reader.js"></script>
+    <script src="js/reader.min.js"></script>
 
     <!-- Plugins -->
     <!-- <script src="js/plugins/search.js"></script> -->
@@ -34,19 +33,19 @@
     <!-- <script src="js/libs/jquery.highlight.js"></script> -->
     <!-- <script src="js/hooks/extensions/highlight.js"></script> -->
 
+    <!-- chrome extension implementation -->
+    <script src="js/content.js"></script>    
 </head>
 <body>
     <div id="sidebar">
         <div id="panels">
-            <!-- <input id="searchBox" placeholder="search" type="search"> -->
-
-            <!-- <a id="show-Search" class="show_view icon-search" data-view="Search">Search</a> -->
-            <a id="show-Toc" class="show_view icon-list-1 active" data-view="Toc">TOC</a>
-            <a id="show-Bookmarks" class="show_view icon-bookmark" data-view="Bookmarks">Bookmarks</a>
-            <!-- <a id="show-Notes" class="show_view icon-edit" data-view="Notes">Notes</a> -->
+            <input type="button" id="show-Toc" class="show_view icon-toc-view active" title="TOC" data-view="Toc">
+            <input type="button" id="show-Bookmarks" class="show_view icon-bookmark-view" title="Bookmarks" data-view="Bookmarks">
+            <!-- <input type="button" id="show-Notes" class="show_view icon-edit" title="Notes" data-view="Notes"> -->
+            <!-- <input type="search" id="searchBox" placeholder="search"> -->
+            <!-- <input type="button" id="show-Search" class="show_view icon-search" title="Search" data-view="Search"> -->
         </div>
-        <div id="tocView" class="view">
-        </div>
+        <div id="tocView" class="view"></div>
         <div id="searchView" class="view">
             <ul id="searchResults"></ul>
         </div>
@@ -62,10 +61,9 @@
         </div>
     </div>
     <div id="main">
-
         <div id="titlebar">
             <div id="opener">
-                <a id="slider" class="icon-menu">Menu</a>
+                <input type="button" id="slider" class="icon-menu" title="Menu">
             </div>
             <div id="metainfo">
                 <span id="book-title"></span>
@@ -73,28 +71,24 @@
                 <span id="chapter-title"></span>
             </div>
             <div id="title-controls">
-                <a id="upload-book" class="icon-upload">Upload book</a>
-                <a id="bookmark" class="icon-bookmark-empty">Bookmark</a>
-                <a id="setting" class="icon-cog">Settings</a>
-                <a id="fullscreen" class="icon-resize-full">Fullscreen</a>
+                <input type="file" id="upload" class="icon-upload" accept="application/epub+zip">
+                <input type="button" id="bookmark" class="icon-bookmark-empty" title="Bookmark">
+                <input type="button" id="settings" class="icon-settings" title="Settings">
+                <input type="button" id="fullscreen" class="icon-resize-full" title="Fullscreen">
             </div>
         </div>
-
         <div id="divider"></div>
         <div id="prev" class="arrow">‹</div>
         <div id="viewer"></div>
         <div id="next" class="arrow">›</div>
         <div id="loader" style="display:none"><img src="img/loader.gif"></div>
-
-        <input id="upload" type="file" accept="application/epub+zip" style="display:none">
     </div>
     <div class="modal md-effect-1" id="settings-modal">
         <div class="md-content">
             <h3>Settings</h3>
             <div>
-                <p>
-                    <input type="checkbox" id="sidebarReflow" name="sidebarReflow"> Reflow text when sidebars are open.
-                </p>
+                <input type="checkbox" id="sidebarReflow" name="sidebarReflow">
+                <label>Reflow text when sidebars are open.</label>
             </div>
             <div class="closer icon-cancel-circled"></div>
         </div>
