--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,13 @@
     <link rel="stylesheet" href="css/popup.css">
 
     <script src="js/libs/jquery.min.js"></script>
-    <script src="js/libs/zip.min.js"></script>
+    <script src="js/libs/jszip.min.js"></script>
+    <script src="js/libs/screenfull.js"></script>
+    <script src="js/libs/epub.min.js"></script>
 
-    <!-- File Storage -->
-    <!-- <script src="js/libs/localforage.min.js"></script> -->
-    <!-- Full Screen -->
-    <script src="js/libs/screenfull.min.js"></script>
-
-    <!-- Render -->
-    <script src="js/epub.min.js"></script>
-
+    <!-- Storage -->
+    <script src="js/storage.min.js"></script>
+    
     <!-- Reader -->
     <script src="js/reader.min.js"></script>
 
