--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,9 @@
 
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jszip.min.js"></script>
-    <script src="js/libs/screenfull.js"></script>
+    <script src="js/libs/rsvp.min.js"></script>
+    <script src="js/libs/screenfull.min.js"></script>
     <script src="js/libs/epub.min.js"></script>
-
-    <!-- Storage -->
-    <script src="js/storage.min.js"></script>
     
     <!-- Reader -->
     <script src="js/reader.min.js"></script>
